tests/fail/typedecl1.juna
type t a =
| T : forall b, b -> int
end

print_string ":("